samples/_failures_safe/1761146334_4af8e2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4e0c7298.c: In function ‘main’:
./samples/SAFE/__tmp_4e0c7298.c:141:25: error: expected ‘;’ at end of input
  141 |     for (size_t i = 0; i
      |                         ^
      |                         ;
./samples/SAFE/__tmp_4e0c7298.c:141:5: error: expected declaration or statement at end of input
  141 |     for (size_t i = 0; i
      |     ^~~
